src/objects/IntegrationMessageQueue__c.object
<CustomObject>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JobName__c</fullName>
        <label>Job Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordCount__c</fullName>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SuccessMessage__c</fullName>
        <label>Success Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Integration Message Queue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>ErrorMessage__c</columns>
        <columns>SuccessMessage__c</columns>
        <columns>JobName__c</columns>
        <columns>Status__c</columns>
        <columns>RecordId__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>IMQ-{0000000}</displayFormat>
        <label>Integration Message Queue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Message Queue Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>